--- a/Casinodice.html
+++ b/Casinodice.html
@@ -85,7 +85,7 @@
     </script>
 <br>
 <br>
-<a href="Index.html" type="button" style="color: aliceblue;">Home</a>
+<a href="index.html" type="button" style="color: aliceblue;">Home</a>
 <br>
 <br>
 <a href="dataload.html" type="button" style="color: aliceblue;">Space Data</a>
