--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ MIKNIEVE@UAT.EDU-->
         <header>
             <h2> <a href="UATspacelogin.html" class="logo">Mikesael Nieves</a></h2>
             <div class="navigation">
-                <a href="UATspacelogin.html" onclick="window.open('UATspacelogin.html','_self');">UAT Space Page</a>
+                <a href="xxx.github.io/UATspacelogin.html">UAT Space Page</a>
                 <a href="Objectives.html">Boards Page</a>
                 <a href="Casinodice.html">Casino Dice</a>
                 <a href="dataload.html">Space Data</a>
